--- a/Android/app/src/main/res/layout/activity_main.xml
+++ b/Android/app/src/main/res/layout/activity_main.xml
@@ -8,9 +8,52 @@
     android:gravity="center"
     tools:context=".MainActivity">
 
-    <WebView
-        android:id="@+id/main_webview"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent">
+
+        <WebView
+            android:id="@+id/main_webview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <LinearLayout
+            android:id="@+id/webview_error_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:background="@color/white"
+            android:visibility="gone"
+            android:orientation="vertical">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/webview_error_text"
+                android:textAlignment="center"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:textSize="@dimen/header_text_size"/>
+            <TextView
+                android:id="@+id/webview_error_detail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="@dimen/error_text_vertical_margin"
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:textSize="@dimen/detail_text_size"/>
+            <Button
+                android:id="@+id/webview_error_refresh"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/button_height"
+                android:paddingHorizontal="@dimen/button_horizontal_padding"
+                android:gravity="center"
+                android:background="@color/gray"
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:textSize="@dimen/button_text_size"
+                android:text="@string/button_text_refresh"/>
+        </LinearLayout>
+
+    </FrameLayout>
 
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
