--- a/Android/app/src/main/res/values/dimensions.xml
+++ b/Android/app/src/main/res/values/dimensions.xml
@@ -6,4 +6,5 @@
     <dimen name="button_height">50dp</dimen>
     <dimen name="button_horizontal_padding">20dp</dimen>
     <dimen name="error_text_vertical_margin">10dp</dimen>
+    <dimen name="fab_margin">10dp</dimen>
 </resources>
