--- a/Android/app/src/main/res/layout/activity_load_api.xml
+++ b/Android/app/src/main/res/layout/activity_load_api.xml
@@ -2,6 +2,7 @@
 <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/api_swipe_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
@@ -10,46 +11,145 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <WebView
-            android:id="@+id/main_webview"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
 
         <LinearLayout
-            android:id="@+id/webview_error_view"
+            android:id="@+id/api_data_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center"
+            android:gravity="center|top"
             android:background="@color/white"
-            android:visibility="gone"
             android:orientation="vertical">
-            <TextView
+            <TableLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/webview_error_text"
-                android:textAlignment="center"
-                android:textStyle="bold"
-                android:textColor="@color/black"
-                android:textSize="@dimen/header_text_size"/>
-            <TextView
-                android:id="@+id/webview_error_detail"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginVertical="@dimen/error_text_vertical_margin"
-                android:textAlignment="center"
-                android:textColor="@color/black"
-                android:textSize="@dimen/detail_text_size"/>
+                android:layout_margin="@dimen/api_text_margin"
+                android:gravity="center"
+                android:background="@color/white"
+                android:stretchColumns="1">
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginVertical="@dimen/api_row_vertical_margin">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/error_message_text"
+                        android:textAlignment="textStart"
+                        android:textStyle="bold"
+                        android:textColor="@color/black"
+                        android:textSize="@dimen/detail_text_size"/>
+                    <TextView
+                        android:id="@+id/api_error_message"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:ellipsize="none"
+                        android:maxLines="100"
+                        android:scrollHorizontally="false"
+                        android:layout_marginHorizontal="@dimen/api_text_margin"
+                        android:textAlignment="textStart"
+                        android:textColor="@color/black"
+                        android:textSize="@dimen/detail_text_size"/>
+                </TableRow>
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginVertical="@dimen/api_row_vertical_margin">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/error_type_text"
+                        android:textAlignment="textStart"
+                        android:textStyle="bold"
+                        android:textColor="@color/black"
+                        android:textSize="@dimen/detail_text_size"/>
+                    <TextView
+                        android:id="@+id/api_error_type"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:ellipsize="none"
+                        android:maxLines="100"
+                        android:layout_marginHorizontal="@dimen/api_text_margin"
+                        android:textAlignment="textStart"
+                        android:textColor="@color/black"
+                        android:textSize="@dimen/detail_text_size"/>
+                </TableRow>
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginVertical="@dimen/api_row_vertical_margin">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/request_id_text"
+                        android:textAlignment="textStart"
+                        android:textStyle="bold"
+                        android:textColor="@color/black"
+                        android:textSize="@dimen/detail_text_size"/>
+                    <TextView
+                        android:id="@+id/api_request_id"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:ellipsize="none"
+                        android:maxLines="100"
+                        android:layout_marginHorizontal="@dimen/api_text_margin"
+                        android:textAlignment="textStart"
+                        android:textColor="@color/black"
+                        android:textSize="@dimen/detail_text_size"/>
+                </TableRow>
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginVertical="@dimen/api_row_vertical_margin">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/time_stamp_text"
+                        android:textAlignment="textStart"
+                        android:textStyle="bold"
+                        android:textColor="@color/black"
+                        android:textSize="@dimen/detail_text_size"/>
+                    <TextView
+                        android:id="@+id/api_time_stamp"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:ellipsize="none"
+                        android:maxLines="100"
+                        android:layout_marginHorizontal="@dimen/api_text_margin"
+                        android:textAlignment="textStart"
+                        android:textColor="@color/black"
+                        android:textSize="@dimen/detail_text_size"/>
+                </TableRow>
+            </TableLayout>
             <Button
-                android:id="@+id/webview_error_refresh"
+                android:id="@+id/api_refresh"
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/button_height"
                 android:paddingHorizontal="@dimen/button_horizontal_padding"
+                android:layout_margin="@dimen/api_text_margin"
                 android:gravity="center"
                 android:background="@color/gray"
                 android:textAlignment="center"
                 android:textColor="@color/black"
                 android:textSize="@dimen/button_text_size"
                 android:text="@string/button_text_refresh"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:visibility="gone"
+            android:id="@+id/api_loading_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:background="@color/white"
+            android:orientation="vertical">
+            <ProgressBar
+                style="?android:attr/progressBarStyleLarge"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
         </LinearLayout>
     </FrameLayout>
 
