--- a/Android/app/src/main/res/values/config.xml
+++ b/Android/app/src/main/res/values/config.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="web_url">https://www.winmasters.gr</string>
+    <string name="api_url">https://gamelaunch-stage.everymatrix.com/</string>
 </resources>
