--- a/Android/app/src/main/res/layout/activity_main.xml
+++ b/Android/app/src/main/res/layout/activity_main.xml
@@ -64,7 +64,7 @@
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
+        android:layout_gravity="center_vertical|end"
         android:layout_margin="@dimen/fab_margin"
         android:backgroundTint="@color/transparent"
         android:src="@drawable/ic_baseline_add_24"
